--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,45 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: antiquewhite;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30px;
+  gap: 20px;
+}
+.parent{
+  border: 1px solid black;
+  width: 50%;
+  padding: 20px;
+  
+  background-color: white;
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  
+}
+.child{
+  display: flex;
+  gap: 20px;
+}
+.btn{
+ 
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  color: black;
+  background-color: orange;
+}
+.parent-heading{
+  color: orange;
 }
